update image for sections

--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -1,8 +1,8 @@
 // COLORS
 $primary-color: #e98362;
 $secondary-color: #eed889;
-$third-color: #95e1d3;
-$title-color: #333333;
+$third-color: #d63031;
+$title-color: #2d3436;
 $text-color: #999999;
 $gray-color: #f8f8f8;
 $gray-dark-color: #cccccc;
