--- a/app/views/blocks/footer.pug
+++ b/app/views/blocks/footer.pug
@@ -2,7 +2,7 @@ footer.footer
   .container
     .footer-top
       .footer-column
-        a.footer-heading.footer-heading--logo(href="index.html") MoGo
+        a.footer-heading.footer-heading--logo(href="index.html") ManU
         p.footer-desc.text Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat enim repellendus est doloremque magni voluptatum dolores beatae quam minima architecto reprehenderit impedit, adipisci optio vitae fuga minus perferendis veniam? At!
         p.footer-follower <strong>15k</strong> followers
         .footer-social
@@ -58,4 +58,4 @@ footer.footer
             img(src="../images/img-instagram1.png")
           .footer-image
             img(src="../images/img-instagram1.png")
-    .footer-bottom &copy; 2016 MoGo free PSD template by <span> LalaQ</span>
+    .footer-bottom &copy; 2021 ManU free PSD template by <span> OldTraff</span>
