--- a/app/views/blocks/header.pug
+++ b/app/views/blocks/header.pug
@@ -1,7 +1,7 @@
 header.header
   .container
     .header-top
-      a.header-logo(href="#") MoGo
+      a.header-logo(href="#") ManU
       i.fa.fa-bars.header-toggle
       ul.header-menu
         +MenuListItem("About")
@@ -16,9 +16,9 @@ header.header
           a.header-menu-icon(href="#")
             i.fa.fa-search
     .header-content
-      h2.header-content-caption Creative template
-      h1.header-content-main Welcome to mogo
-      a.header-content-more(href="#") Learn more
+      h2.header-content-caption Old Trafford
+      h1.header-content-main Welcome to ManU
+      a.header-content-more(href="#") Let's go
     .header-bottom
       +HeaderBottomItem("01", "Intro")
       +HeaderBottomItem("02", "Work")
