--- a/app/views/blocks/people.pug
+++ b/app/views/blocks/people.pug
@@ -1,28 +1,28 @@
 section.people
   .container
-    +blockHeader("Happy Clients", "What people say")
+    +blockHeader("Happy Clients", "Manchester United F.C. managers")
     ul.people-list
       li.people-item
-        img.people-avatar(src="../images/img-people1.png")
+        img.people-avatar(src="https://resources.premierleague.com/premierleague/photos/players/250x250/man58.png")
         .people-info
-          h3.people-name Mathew Dix
-          span.people-job.text.text--light Graphic Design
+          h3.people-name Alex Ferguson
+          span.people-job.text.text--light Football Manager
           p.people-desc.text Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, nobis, debitis voluptates quam eaque Fugit, nobis, debitis voluptates quam eaque
       li.people-item
-        img.people-avatar(src="../images/img-people2.png")
+        img.people-avatar(src="https://images2.minutemediacdn.com/image/upload/c_fill,w_912,h_516,f_auto,q_auto,g_auto/shape/cover/sport/5926fdf90eb35bcac9000002.jpg")
         .people-info
-          h3.people-name Mathew Dix
-          span.people-job.text.text--light Graphic Design
+          h3.people-name José Mourinho
+          span.people-job.text.text--light Football Manager
           p.people-desc.text Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, nobis, debitis voluptates quam eaque Fugit, nobis, debitis voluptates quam eaque
       li.people-item
-        img.people-avatar(src="../images/img-people3.png")
+        img.people-avatar(src="https://images2.minutemediacdn.com/image/upload/c_fill,w_912,h_516,f_auto,q_auto,g_auto/shape/cover/sport/fulham-fc-v-manchester-united-premier-league-5c61210074d4335dbf000001.jpg")
         .people-info
-          h3.people-name Mathew Dix
-          span.people-job.text.text--light Graphic Design
+          h3.people-name Ole Gunnar Solskjær
+          span.people-job.text.text--light Football Manager
           p.people-desc.text Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, nobis, debitis voluptates quam eaque Fugit, nobis, debitis voluptates quam eaque
       li.people-item
-        img.people-avatar(src="../images/img-people4.png")
+        img.people-avatar(src="https://www.aljazeera.com/wp-content/uploads/2021/11/2021-11-29T114253Z_196021436_RC2B4R93MTF7_RTRMADP_3_SOCCER-ENGLAND-MUN.jpg?resize=770%2C513")
         .people-info
-          h3.people-name Mathew Dix
-          span.people-job.text.text--light Graphic Design
+          h3.people-name Ralf Rangnick
+          span.people-job.text.text--light Football Manager
           p.people-desc.text Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, nobis, debitis voluptates quam eaque Fugit, nobis, debitis voluptates quam eaque
