--- a/app/views/blocks/quote.pug
+++ b/app/views/blocks/quote.pug
@@ -1,13 +1,12 @@
 section.quote
   .container
     .quote-list
-
       .quote-item
         .quote-icon
           img(src="../images/img-quote.png")
         .quote-info
-          p.quote-desc Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam et nesciunt perspiciatis dignissimos quae illum, deserunt, laboriosam distinctio architecto, fuga deleniti. Dolores impedit enim a, expedita consequatur repellendus facilis obcaecati.
-          span.quote-author John Doe
+          p.quote-desc The work of a team should always embrace a great player but the great player must always work.
+          span.quote-author Sir Alex Ferguson
       .quote-item
         .quote-icon
           img(src="../images/img-quote.png")
