--- a/app/styles/layout/_header.scss
+++ b/app/styles/layout/_header.scss
@@ -2,7 +2,7 @@
   min-height: 100rem;
   background: linear-gradient(
       to bottom,
-      rgba($primary-color, 0.8),
+      rgba(#d63031, 0.8),
       rgba($secondary-color, 0.8)
     ),
     url("../images/img-header-bg.jpg") no-repeat center / cover;
