--- a/app/views/blocks/work.pug
+++ b/app/views/blocks/work.pug
@@ -10,7 +10,7 @@ section.work
           h3.work-title Creatively designed
           span.work-desc.text.text--light Lorem ipsumor lipsum as
       .work-item
-        img.work-image(src="https://static01.nyt.com/images/2020/12/20/sports/20onsoccer1/merlin_181491138_64a5e591-2350-4662-8a75-20cc39e670a8-articleLarge.jpg?quality=75&auto=webp&disable=upscale")
+        img.work-image(src="https://imgresizer.eurosport.com/unsafe/1200x0/filters:format(jpeg):focal(1274x297:1276x295)/origin-imgresizer.eurosport.com/2021/12/16/3272860-66974468-2560-1440.jpg")
         .work-content
           i.fa.fa-home.work-icon
           h3.work-title Creatively designed
@@ -23,7 +23,7 @@ section.work
           h3.work-title Creatively designed
           span.work-desc.text.text--light Lorem ipsumor lipsum as
       .work-item
-        img.work-image(src="https://phapluatxahoi.vn/stores/news_dataimages/caokyplxh/042021/05/17/in_article/2528_156.jpg?rt=20210405172531")
+        img.work-image(src="https://i2-prod.manchestereveningnews.co.uk/incoming/article19174720.ece/ALTERNATES/s615/0_GettyImages-1228892388-1.jpg")
         .work-content
           i.fa.fa-home.work-icon
           h3.work-title Creatively designed
